--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,60 @@
-# Dependencias
+# === Dependencias ===
 node_modules/
 .pnp
 .pnp.js
+.pnpm-store/
 
-# Testing
-coverage/
-
-# Producción
-build/
-dist/
-.next/
-out/
-
-# Misc
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# Environment
+# === Entornos ===
 .env
 .env.local
 .env.development
 .env.test
 .env.production
+.venv/
+venv/
 
-# IDE
+# === Logs y caché ===
+*.log
+logs/
+.npm/
+.yarn/
+.pytest_cache/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# === Sistemas operativos ===
+.DS_Store
+Thumbs.db
+
+# === IDEs ===
 .vscode/
 .idea/
+*.swp
+*.swo
 
-# Python
+# === Build/Output ===
+dist/
+build/
+out/
+.next/
+.cache/
+.coverage/
+
+# === Base de datos ===
+*.db
+*.sqlite
+*-journal
+/prisma/migrations/
+
+# === Docker ===
+docker-compose.override.yml
+
+# === Python ===
+*.egg-info/
 __pycache__/
-*.py[cod]
-*$py.class
 *.so
 .Python
-pyvenv.cfg
-venv/
+pip-log.txt
+pip-delete-this-directory.txt
