--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,12 +16,15 @@
     "@trpc/next": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "@types/swiper": "^6.0.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
