--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "superjson": "^2.2.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
