--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts --respawn --transpile-only seed.ts",
+    "seed": "ts-node-dev --transpile-only prisma/seed.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -20,7 +21,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "joi": "^18.0.0"
+    "joi": "^18.0.0",
+    "node": "^24.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
