--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --exec ts-node src/index.ts --respawn --transpile-only seed.ts",
-    "seed": "ts-node-dev --transpile-only prisma/seed.ts",
+    "dev": "nodemon --watch src --exec ts-node --transpile-only src/index.ts",
+    "seed": "ts-node --transpile-only prisma/seed.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -21,14 +21,14 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "joi": "^18.0.0",
-    "node": "^24.6.0"
+    "joi": "^18.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.19.7",
+    "node": "^24.6.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.14.0",
     "ts-node": "^10.9.2",
