--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "docker:down": "docker-compose -f infra/docker-compose.yml down"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "concurrently": "^8.2.2",
     "npm-run-all": "^4.1.5"
   },
