--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,13 +22,15 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "joi": "^18.0.0"
+    "joi": "^18.0.0",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.19.7",
+    "@types/nodemailer": "^7.0.1",
     "node": "^24.6.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.14.0",
