--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,12 +18,14 @@
     "@prisma/client": "^6.14.0",
     "@supabase/supabase-js": "^2.55.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "joi": "^18.0.0",
     "lodash": "^4.17.21",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/joi": "^17.2.3",
     "@types/lodash": "^4.17.20",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.7",
     "@types/nodemailer": "^7.0.1",
     "node": "^24.6.0",
