--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
     "superjson": "^2.2.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
