--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,17 +26,16 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
     "ioredis": "^5.8.2",
-    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.3",
     "lodash": "^4.17.21",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
