--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch src --exec ts-node --transpile-only src/index.ts",
     "seed": "ts-node --transpile-only prisma/seed.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc && prisma generate",
+    "start": "node dist/index.js",
+    "prisma": "prisma"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
