--- a/apps/backend/render.yaml
+++ b/apps/backend/render.yaml
@@ -3,8 +3,8 @@ services:
     name: backend
     runtime: node
     plan: free
-    buildCommand: pnpm install --frozen-lockfile && pnpm --filter backend build && pnpm --filter backend prisma generate
-    startCommand: node apps/backend/dist/index.js
+    buildCommand: cd /opt/render/project && pnpm install --frozen-lockfile && pnpm --filter backend build && pnpm --filter backend prisma generate
+    startCommand: node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
