fix: reorder prisma generate before tsc in build process
- Move prisma generate before tsc compilation
- Ensures Prisma Client types are available for TypeScript compilation
- Update both package.json and render.yaml build commands

--- a/apps/backend/render.yaml
+++ b/apps/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: backend
     runtime: node
     plan: free
-    buildCommand: cd /opt/render/project && pnpm install --frozen-lockfile && pnpm --filter backend build && pnpm --filter backend prisma generate
+    buildCommand: pnpm install --frozen-lockfile && pnpm --filter backend prisma generate && pnpm --filter backend build
     startCommand: node apps/backend/dist/index.js
     envVars:
       - key: NODE_ENV
