--- a/apps/backend/render.yaml
+++ b/apps/backend/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: node
     plan: free
     buildCommand: pnpm install --frozen-lockfile && pnpm --filter backend prisma generate && pnpm --filter backend build
-    startCommand: node apps/backend/dist/index.js
+    startCommand: node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
