--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
+    "rootDir": "src",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "outDir": "dist",
     "types": [
       "node"
     ],
@@ -16,7 +17,7 @@
     ]
   },
   "include": [
-    "src/**/*.ts", "*.ts" ,"seed.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
